@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST orage-4.5.92.tar.bz2 1913199 RMD160 fcf8af5f6135d79e99164c76fceba4cd771b4ab0 SHA1 645d2945a668e6ce257ab7a01dfc7868d8dc0aa8 SHA256 34192bbb2261af54777257274fe01c638ccfc11b26cd5ed6e28226ecf8388778
 DIST orage-4.5.93.tar.bz2 1923790 RMD160 bc30d686764644c586e6e995e55d80b4036507bf SHA1 8737766955bde0253954513658974bc38b4b706d SHA256 79bcf145e3672aeb3e21ab37804267f4587cc94b8e783be41fbf9fe33491db13
+DIST orage-4.5.99.1.tar.bz2 1959556 RMD160 a0b1bf4c5cb764c3f32196cd6744fa84c37c1bf6 SHA1 9f7795fbde631e8f61f0c3c3432101d01ce3e4b9 SHA256 babeb5338520146dda9ce9f4d090ec8b4248adad62b7c0a061da505d54dfe07b
 EBUILD orage-4.5.92.ebuild 993 RMD160 ea5988126afd57fa03a95031803f27b039da1b78 SHA1 26711cbdc38956be2428109c189526d32458512d SHA256 a96bad9c2eae7a7bef61d6a3f6f5b9f5457c87de5cd2f640a5821175b045e07f
 EBUILD orage-4.5.93.ebuild 993 RMD160 ea5988126afd57fa03a95031803f27b039da1b78 SHA1 26711cbdc38956be2428109c189526d32458512d SHA256 a96bad9c2eae7a7bef61d6a3f6f5b9f5457c87de5cd2f640a5821175b045e07f
+EBUILD orage-4.5.99.1.ebuild 993 RMD160 ea5988126afd57fa03a95031803f27b039da1b78 SHA1 26711cbdc38956be2428109c189526d32458512d SHA256 a96bad9c2eae7a7bef61d6a3f6f5b9f5457c87de5cd2f640a5821175b045e07f
 EBUILD orage-9999.ebuild 1012 RMD160 722d708e373b63e83760b60a3ac4deaaccf9c36d SHA1 9df02cc0548c7bcd76bc90189e0553cc49b63a33 SHA256 d3df85d7a12dc4997216b7dc356e2b03b0e6bfec6e9dd84034564c7d1a65fba9
-MISC ChangeLog 1207 RMD160 0fa3c2582b4037fb68f15192feef94f2d89b3797 SHA1 a2f08eb620bcc557058db7fdc8dae2553f464451 SHA256 e079e931d0d5a3de64229b94659726916a8f1a31d8163cf1f21948e3fe8cbd96
+MISC ChangeLog 1330 RMD160 eef4789a6a09425102b539e496c1906335ea6642 SHA1 50183742711ff92eabab790ab558340399d42920 SHA256 b5b6ffe4396cdc1c5902690085c9ba109156605095e0ebf02a33eb506ef003fd
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEekACgkQKhnDs22gwa/W5ACg4GwJ9hJHUXyPhe9MMaQ/3ewA
-PiAAoIvfkIuzXxNZ4OCKj7CiVMyqrdcg
-=914y
+iEYEARECAAYFAkl9xT8ACgkQKhnDs22gwa9VdgCeLujZ4KqKYkWVwiplJ4XBg6uQ
+tdQAn1WX+vGGaQtawKp+shcDhNO2JQs4
+=gMGK
 -----END PGP SIGNATURE-----
